[gd_scene load_steps=8 format=3 uid="uid://bq35r057oq0du"]

[ext_resource type="Script" path="res://scenes/levels/granade.gd" id="1_uqlj0"]
[ext_resource type="Texture2D" uid="uid://c2o8v7ubkgvwy" path="res://graphics/frag.png" id="2_trwji"]
[ext_resource type="Texture2D" uid="uid://bsb7vo3o76t1w" path="res://graphics/blast.png" id="3_37xp5"]
[ext_resource type="AudioStream" uid="uid://b2lglsnn6j8kq" path="res://audio/exp.mp3" id="4_t8ufs"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wlk8b"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_nkfr3"]
radius = 39.0

[sub_resource type="CircleShape2D" id="CircleShape2D_kymkb"]
radius = 87.0

[node name="Nade" type="RigidBody2D"]
collision_layer = 8
collision_mask = 4
mass = 0.4
gravity_scale = 0.0
script = ExtResource("1_uqlj0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_wlk8b")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(4.76837e-07, 1.78814e-07)
scale = Vector2(0.07, 0.07)
texture = ExtResource("2_trwji")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="Blast1" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_nkfr3")

[node name="Area2D2" type="Area2D" parent="."]

[node name="Blast2" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource("CircleShape2D_kymkb")

[node name="Blast" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.291667, 0.291667)
texture = ExtResource("3_37xp5")

[node name="expl" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-294, -163)
stream = ExtResource("4_t8ufs")
attenuation = 0.0525563

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="area_entered" from="Area2D2" to="." method="_on_area_2d_2_area_entered"]
[connection signal="area_exited" from="Area2D2" to="." method="_on_area_2d_2_area_exited"]
